# yap

./: .gitignore  README.md  index.html  package.json  pill.html  pnpm-lock.yaml  vite.config.ts  yap.md
.github/workflows/: release.yml
src/: App.svelte  Pill.svelte  app.css  pill.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
web/: index.html  landing.html
web/favicon_io/: about.txt
